# image-to-pixels-in-terminal

./: CMakeLists.txt
.cache/clangd/index/: animation.cpp.EC593FC5FFCA755E.idx  animation.hpp.6AAEFAF906AE8999.idx  automerge.cpp.02DFBD5860FCDDF8.idx  autoreset.hpp.C68E51973A291518.idx  blink.cpp.E7E29356BE33D2A3.idx  bold.cpp.620FD242008E5DD2.idx  border.cpp.692550AA2F80FA1B.idx  box.cpp.4C50330812DFBB67.idx  box.hpp.D9EFA3512D817DEF.idx  box_helper.cpp.21CD0BC6AD02273F.idx  box_helper.hpp.C96CB290B003A0F1.idx  button.cpp.E3F9FA07B9FC8C77.idx  canvas.cpp.1D9366BACFCAF697.idx  canvas.hpp.209E2DB7FE569682.idx  captured_mouse.hpp.22FBDBAF30E99DAA.idx  catch_event.cpp.80E757E7E7288D19.idx  checkbox.cpp.2E4CE12DB221E0A5.idx  clear_under.cpp.32FD30BDD2157E97.idx  collapsible.cpp.CB8BF306B3CA729C.idx  color.cpp.611F7578C7E795AE.idx  color.cpp.E6041B99D9CC3C5D.idx  color.hpp.92CFCB771BFA6941.idx  color_info.cpp.9274DEE3D669E901.idx  color_info.hpp.195B425739094150.idx  component.cpp.98A73D62933CE255.idx  component.hpp.A0D02072F52AE4E4.idx  component_base.hpp.DCC638A7502CC0AE.idx  component_options.cpp.4902E0F149C6546A.idx  component_options.hpp.8E3EC5E97E4FF01B.idx  composite_decorator.cpp.DFE5217C500A52A5.idx  container.cpp.FBA466D8701C5CC5.idx  dbox.cpp.81B8AE38DEE4F932.idx  deprecated.hpp.B770EE0CB62035B3.idx  deprecated.hpp.EC4C75D656036DFB.idx  dim.cpp.924E2D9D136B32E3.idx  (+83 more)
pixelator/: CMakeLists.txt  drawer.hpp  generic.hpp  image.hpp  pixelated_image.cpp  pixelated_image.hpp  stb_image_data_view.cpp  stb_image_data_view.hpp
src/: CMakeLists.txt  pixelated.cpp
